<resources>
    <string name="app_name">E-Medicine</string>

    <string name="splash_sc">Splash Screen</string>

    <string name="content_desc">Image</string>

    <string name="warning_title">Warning</string>
    <string name="color_shape_selection_msg">Please select one of color, shape, or both to find the drug.</string>
    <string name="no_results">No results</string>

    <!--action bar strings -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_alarms">Alarms</string>
    <string name="action_refresh">Refresh</string>
    <!--<string name="search_hint">Drug name&#8230;</string>-->
    <string name="search_hint">Brand or Generic name&#8230;</string>
    <string name="menu_search">Search</string>
    <string name="search_result">Search result</string>
    <string name="drug_details">Drug details</string>
    <string name="drugs_main">Drugs</string>
    <string name="pill_identify">Pill Identifier</string>

    <!-- tab strings -->
    <string name="tab_contra">Contra-indications</string>
    <string name="tab_advice">Advices</string>
    <string name="tab_alt_names">Alternative-names</string>


    <!-- about dialog strings -->
    <string name="about_title">E-Medicine</string>
    <string name="about_message">
        A medical application that will give you information on contraindications and advise You what to consume or not.\n\nThe information is taken from real data sets containing information about drugs, contraindications and advises.\n
        \nTake in mind that this is only an INFORMATION not a total diagnosis or other medical advise.\n\nConsult your doctor about everything!
    </string>

    <!-- details dialog strings -->
    <string name="details_title">Drug details</string>
    <string name="contraindication_tag">&#187; Contraindications:</string>
    <string name="advice_tag">&#187; Advices:</string>
    <string name="create_alarm">Set reminder</string>
    <string name="how_many_times">How many times a day you will take the medicine?</string>
    <string name="number_pills">How many pills?</string>
    <string name="set_alarm_btn">Set</string>
    <string name="enter_number_of_times">Please enter how many times you will take the medicine!</string>
    <string name="custom_start_time">Time for first pill</string>


    <!-- string for progress dialogs -->
    <string name="loading_db">Loading&#8230;</string>
    <string name="searching_db">Searching&#8230;</string>

    <!-- fragment strings -->
    <string name="search">SEARCH</string>
    <string name="pill_details">DETAILS</string>
    <string name="option_color">Color:</string>
    <string name="option_shape">Shape:</string>
    <string-array name="colors">
        <item>Please select a color</item>
        <item>BLACK</item>
        <item>BLUE</item>
        <item>BROWN</item>
        <item>GRAY</item>
        <item>GREEN</item>
        <item>ORANGE</item>
        <item>PINK</item>
        <item>PURPLE</item>
        <item>RED</item>
        <item>TURQUOISE</item>
        <item>YELLOW</item>
        <item>WHITE</item>
    </string-array>
    <string-array name="colors_hex">
        <item>#012345</item>
        <item>#000000</item>
        <item>#0000FF</item>
        <item>#663300</item>
        <item>#5B5B5B</item>
        <item>#00FF00</item>
        <item>#FFA500</item>
        <item>#ffb6c1</item>
        <item>#800080</item>
        <item>#FF0000</item>
        <item>#00e5ee</item>
        <item>#FFFF00</item>
        <item>#FFFFFF</item>
    </string-array>
    <string-array name="shapes">
        <item>Please select a shape</item>
        <item>BULLET</item>
        <item>CAPSULE</item>
        <item>CLOVER</item>
        <item>DIAMOND</item>
        <item>DOUBLE CIRCLE</item>
        <item>FREEFORM</item>
        <item>GEAR</item>
        <item>HEPTAGON</item>
        <item>HEXAGON</item>
        <item>OCTAGON</item>
        <item>OVAL</item>
        <item>PENTAGON</item>
        <item>RECTANGLE</item>
        <item>ROUND</item>
        <item>SEMI-CIRCLE</item>
        <item>SQUARE</item>
        <item>TEAR</item>
        <item>TRAPEZOID</item>
        <item>TRIANGLE</item>
    </string-array>
    <string-array name="shapes_images">
        <item>@drawable/ic_info_outline_white_36dp</item>
        <item>@drawable/ic_bullet</item>
        <item>@drawable/ic_capsule</item>
        <item>@drawable/ic_clover</item>
        <item>@drawable/ic_diamond</item>
        <item>@drawable/ic_double_circle</item>
        <item>@drawable/ic_freeform</item>
        <item>@drawable/ic_gear</item>
        <item>@drawable/ic_heptagon</item>
        <item>@drawable/ic_hexagon</item>
        <item>@drawable/ic_octagon</item>
        <item>@drawable/ic_oval</item>
        <item>@drawable/ic_pentagon</item>
        <item>@drawable/ic_rectangle</item>
        <item>@drawable/ic_round</item>
        <item>@drawable/ic_semi_circle</item>
        <item>@drawable/ic_square</item>
        <item>@drawable/ic_tear</item>
        <item>@drawable/ic_trapezoid</item>
        <item>@drawable/ic_triangle</item>
    </string-array>

    <!-- Acttions activity buttons text -->
    <string name="action_drugs">Medicine search &amp; information</string>
    <string name="action_pill_identifier">Pill identifier</string>

    <!-- connection check strings -->
    <string name="connection_title">Check connection</string>
    <string name="connection_message">Could not connect to server.</string>
    <string name="connection_cancel_dialog">Cancel</string>
    <string name="connection_ok_dialog">Connect</string>

    <!-- other strings -->
    <string name="name_not_available">Name not available</string>
    <string name="no_details_available">No details available at this moment.</string>
    <string name="no_alarm_available">Cannot create alarm for this drug.</string>
    <string name="error_occurred">An error occurred, please try again.</string>
    <string name="drug_drug_ind">&#183;Drug-drug indications:</string>
    <string name="other_ind">&#183;Other indications:</string>
    <string name="precautions">&#183;Precautions:</string>
    <string name="warnings">&#183;Warnings:</string>
    <string name="general_p">&#183;Genral precautions:</string>
    <string name="ind_usg">&#183;Indications and usage:</string>
</resources>
