<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtIndUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtIU"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtIU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGenralP"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/ind_usg"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGenralP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGP"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWarnings"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/general_p"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWarnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtW"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPrecautions"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/warnings"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPrecautions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtP"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/precautions"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>